welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: Missing closing brace `}' assumed here
if (estFacemur) {avance;
^Program:3: error: ';' expected but 'else' found.
else {recule()}
^